# HPC25

amazing_llm/07-amazing_llm/: writeup.md
amazing_llm/07-amazing_llm/source_code/quant/: setup.json
amazing_llm/07-amazing_llm/source_code/quant/csrc/: q6bit.cpp  q6bit.h
amazing_llm/07-amazing_llm/source_code/quant/q6bit/: cfunc.py
bitmatrix/03-bitmatrix/: writeup.md
bitmatrix/03-bitmatrix/source_code/: user.cpp
calculation/05-calculation/: writeup.md
calculation/05-calculation/source_code/: compile.sh  query_sum.h
m4c/06-m4c/: writeup.md
m4c/06-m4c/source_code/: compile.sh  fastreq.h  main.cpp  start
oceansim/04-oceansim/: README.md  writeup.md
oceansim/04-oceansim/source_code/: OceanSim.cpp
rope_net_simulation/09-rope_net_simulation/: .gitignore  writeup.md
rope_net_simulation/09-rope_net_simulation/source_code/: CMakeLists.txt  OdeEuler.cpp  acceleration.cpp  calGF.cpp
simple_question/02-simple_question/: answer.yaml  evaluate.py  template.txt  writeup.md
wrf/10-wrf/: readme.md
wrf/10-wrf/source_code/: build  run
wrf/10-wrf/source_code/build_scripts/: check_dependencies.sh  env_setup.sh
